# MouthFull

./: .editorconfig  .env.example  .gitignore  AGENT_HANDOFF.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MouthFull.spec  MouthFull_Debug.spec  README.md  SECURITY.md  VoiceFlow.spec  VoiceFlow_Debug.spec  build.bat  build.ps1  clean.bat  config.yaml  convert_icon.py  create_shortcut.py  installer.iss  png_to_ico.py  pyproject.toml  refactor.py  rename_blab.py  rename_mouthfull.py  requirements-lock.txt  requirements.txt  rewrite_theme.py  run_dev.bat  test_exe.ps1  test_exe_2.ps1  test_icon.py  test_loader.py  test_orb.py  voice-orb-demo (1).html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
Recommendartions/: orb_reference.html  orb_reference_2.js
docs/: CONTRIBUTING.md
scripts/: build.py
src/mouthfull/: __init__.py  __main__.py  app.py
src/mouthfull/backend/audio/: __init__.py  capture.py  devices.py  vad.py
src/mouthfull/backend/injection/: injector.py
src/mouthfull/backend/input/: hotkey.py
src/mouthfull/backend/llm/: __init__.py  llamacpp_llm.py  prompts.py  service.py
src/mouthfull/backend/llm/providers/: __init__.py  anthropic.py  base_api.py  custom.py  gemini.py  groq.py  ollama.py  openai.py  openrouter.py
src/mouthfull/backend/prompt/: service.py
src/mouthfull/backend/stt/: downloader.py  parakeet_stt.py  service.py  whisper_stt.py
src/mouthfull/configs/: config.py
src/mouthfull/ui/: app.py  bridge.py  dashboard.py  llms.py  logs.py  models.py  notifications.py  overlay.py  performance.py  prompt.py  settings.py  theme.py  tray.py  wizard.py
src/mouthfull/ui/widgets/: __init__.py  audio_meter.py  card.py  hotkey_recorder.py  nav_rail.py  status_badge.py  toast.py  toggle_switch.py
src/mouthfull/utils/: app_context.py  download_manager.py  events.py  exceptions.py  installed_apps.py  logger.py  perf.py  window.py
src/voiceflow/: __init__.py  __main__.py  app.py
src/voiceflow/audio/: capture.py  devices.py  vad.py
src/voiceflow/core/: __init__.py  config.py  events.py  exceptions.py  logger.py  perf.py
src/voiceflow/injection/: __init__.py  injector.py
src/voiceflow/input/: __init__.py  hotkey.py  injector.py
src/voiceflow/llm/: base.py  llamacpp_llm.py  prompts.py  service.py
src/voiceflow/llm/providers/: __init__.py  anthropic.py  base_api.py  custom.py  gemini.py  ollama.py  openai.py  openrouter.py
src/voiceflow/stt/: base.py  parakeet_stt.py  service.py  whisper_stt.py
src/voiceflow/ui/: __init__.py  app.py  bridge.py  dashboard.py  llms.py  logs.py  models.py  notifications.py  overlay.py  performance.py  settings.py  theme.py  tray.py  wizard.py
src/voiceflow/ui/assets/: orb.html
src/voiceflow/ui/widgets/: __init__.py  audio_meter.py  card.py  hotkey_recorder.py  nav_rail.py  status_badge.py  toast.py  toggle_switch.py
src/voiceflow/utils/: model_downloader.py  window.py
tests/: __init__.py  conftest.py  test_events.py
voiceai_ui/: README.md  main.py
voiceai_ui/ui/: app.py  dashboard.py  llms.py  logs.py  models.py  notifications.py  overlay.py  performance.py  settings.py  theme.py  tray.py  wizard.py
voiceai_ui/ui/widgets/: __init__.py  audio_meter.py  card.py  hotkey_recorder.py  nav_rail.py  status_badge.py  toast.py  toggle_switch.py
